--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -40,8 +40,14 @@
         </li>
         <li>
             <a href="{% url 'category_list' %}" class="{%if request.path == '/category_list/' %}active{% endif %}">
-                <img src="{% static 'client/img/reports.svg' %}" alt="Categories" class="icon">
+                <img src="{% static 'client/img/category.svg' %}" alt="Categories" class="icon">
                 <span>Categories</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'manage_questionnaires' %}" class="{%if request.path == '/manage_questionnaires/' %}active{% endif %}">
+                <img src="{% static 'client/img/questionnaire.svg' %}" alt="Questionnaires" class="icon">
+                <span>Questionnaires</span>
             </a>
         </li>
         <div class="logout">
