--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -61,21 +61,22 @@
       </header>
       <div class="module-list">
         {% for module in outside_modules|slice:":3" %}
-          <article class="module-card">
-            <h3>{{ module.title }}</h3>
-            <p>{{ module.description }}</p>
-            <div class="progress-container">
-              <div class="progress-bar">
-                <div class="progress-fill" style="width: {{ module.progress_value }}%;"></div>
-              </div>
+            <div class="module-card">
+                <h3>{{ module.title }}</h3>
+                <p>{{ module.description }}</p>
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress-fill" style="width: {{ module.progress_value }}%;"></div>
+                    </div>
+                </div>
+                <span class="progress-text">{{ module.progress_value }}% Complete</span>
+                <a href="{% url 'module_overview' module.id %}" class="view-module-button">Start Module</a>
             </div>
-            <span class="progress-text">{{ module.progress_value }}% Complete</span>
-            <a href="{% url 'module_overview' module.id %}" class="view-module-button">Start Module</a>
-          </article>
-        {% endfor %}
-      </div>
-    </section>
-  </div>
+        {% endfor %}      
+    </div>
+</div>
+
+
   <!-- END MAIN CONTENT COLUMN -->
 
   <!-- RIGHT SIDEBAR COLUMN -->
