--- a/client/templates/client/users_management.html
+++ b/client/templates/client/users_management.html
@@ -36,8 +36,8 @@
         </thead>
         <tbody>
             {% for user in users %}
-            <tr onclick="window.location.href='{% url 'user_detail_view' user.id %}'" style="cursor: pointer;">
-                <td>{{ user.id }}</td>
+            <tr onclick="window.location.href='{% url 'user_detail_view' user.user.id %}'" style="cursor: pointer;">
+                <td>{{ user.user.id }}</td>
                 <td>{{ user.user.full_name }}</td>
                 <td>{{ user.user.email }}</td>
                 <td>{{ user.age|default:"N/A" }}</td>
