Refine dashboard and exercise_detail UI; remove unnecessary icons

--- a/client/templates/client/modules_statistics.html
+++ b/client/templates/client/modules_statistics.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'client/css/statistics.css' %}">
     <div class="content">
         <div class="top-bar">
-            <h1>Modules Statistics 📊</h1>
+            <h1>Modules Statistics</h1>
 
             <div class="export-buttons">
                 <a href="{% url 'export_modules_statistics_csv' %}" class="custom-btn">
@@ -21,7 +21,7 @@
         <div class="charts">
             <!-- User Gender Distribution -->
             <div class="chart-box count">
-                <h3 class= count>Number of Modules 📊</h3>
+                <h3 class= count>Number of Modules</h3>
                 <h3 class= count>{{ modules_count }}</h3>
             </div>
 
