--- a/client/templates/client/programs_statistics.html
+++ b/client/templates/client/programs_statistics.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static 'client/css/statistics.css' %}">
     <div class="content">
         <div class="top-bar">
-            <h1>Programs Statistics 📊</h1>
+            <h1>Programs Statistics</h1>
 
             <div class="export-buttons">
                 <a href="{% url 'export_programs_statistics_csv' %}" class="custom-btn">
@@ -20,7 +20,7 @@
         <div class="charts">
             <!-- User Gender Distribution -->
             <div class="chart-box count">
-                <h3 class= count>Number of Programs 📊</h3>
+                <h3 class= count>Number of Programs </h3>
                 <h3 class= count>{{ programs_count }}</h3>
             </div>
 
