--- a/client/templates/client/reports.html
+++ b/client/templates/client/reports.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'client/css/reports.css' %}">
     <div class="content">
         <div class="top-bar">
-            <h1>Reports Dashboard 📊</h1>
+            <h1>Reports Dashboard </h1>
         </div>
 
         <!-- Charts Section -->
