--- a/client/templates/client/userStatistics.html
+++ b/client/templates/client/userStatistics.html
@@ -38,7 +38,7 @@
 
 <div class="content">
     <div class="top-bar">
-        <h1>User Statistics 📊</h1>
+        <h1>User Statistics</h1>
         <div class="export-buttons">
             <a href="{% url 'export_user_statistics_csv' %}" class="custom-btn">
                 Generate Report (CSV)
