--- a/client/templates/client/add_video.html
+++ b/client/templates/client/add_video.html
@@ -91,7 +91,7 @@
     }
 
     .upload-btn:hover {
-        background: linear-gradient(45deg, #ff6b00, #004aad);
+        background:  #ff6b00;
         transform: scale(1.05);
     }
 
